WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72699
[Qt][WK2] UI process segfaults, when visiblity properties are set while the WebProcess is dead.
https://bugs.webkit.org/show_bug.cgi?id=72699
Summary
[Qt][WK2] UI process segfaults, when visiblity properties are set while the W...
alan
Reported
2011-11-18 00:55:24 PST
[Qt][WK2] UI process segfaults, when visiblity properties are set while the WebProcess is dead.
Attachments
Patch
(2.09 KB, patch)
2011-11-18 01:05 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2011-11-18 01:05:02 PST
Created
attachment 115762
[details]
Patch
Simon Hausmann
Comment 2
2011-11-18 01:10:23 PST
Comment on
attachment 115762
[details]
Patch r=me
WebKit Review Bot
Comment 3
2011-11-18 03:16:55 PST
Comment on
attachment 115762
[details]
Patch Clearing flags on attachment: 115762 Committed
r100741
: <
http://trac.webkit.org/changeset/100741
>
WebKit Review Bot
Comment 4
2011-11-18 03:17:00 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug