[Qt][WK2] UI process segfaults, when visiblity properties are set while the WebProcess is dead. https://bugs.webkit.org/show_bug.cgi?id=72699

The drawing area may be null, if the web process has crashed, but not yet recovered.
Always null check against drawing area.

Patch by Zalan Bujtas <zbujtas@gmail.com> on 2011-11-18
Reviewed by Simon Hausmann.

* UIProcess/qt/QtWebPageProxy.cpp:
(QtWebPageProxy::setDrawingAreaSize):
(QtWebPageProxy::setVisibleContentRectAndScale):
(QtWebPageProxy::setVisibleContentRectTrajectoryVector):

git-svn-id: svn://svn.chromium.org/blink/trunk@100741 bbb929c8-8fbe-4397-9dbb-9b2b20218538