third_party/WebKit/Source/WebKit2/UIProcess/qt/QtWebPageProxy.cpp
@@ -751,6 +751,7 @@ void QtWebPageProxy::setDrawingAreaSize(const QSize& size)
 {
     if (!m_webPageProxy->drawingArea())
         return;
+
     m_webPageProxy->drawingArea()->setSize(IntSize(size), IntSize());
 }
 
@@ -904,6 +905,9 @@ void QtWebPageProxy::doneWithTouchEvent(const NativeWebTouchEvent& event, bool w
 
 void QtWebPageProxy::setVisibleContentRectAndScale(const QRectF& visibleContentRect, float scale)
 {
+    if (!m_webPageProxy->drawingArea())
+        return;
+
     QRect alignedVisibleContentRect = visibleContentRect.toAlignedRect();
     m_webPageProxy->drawingArea()->setVisibleContentsRectAndScale(alignedVisibleContentRect, scale);
 
@@ -913,6 +917,9 @@ void QtWebPageProxy::setVisibleContentRectAndScale(const QRectF& visibleContentR
 
 void QtWebPageProxy::setVisibleContentRectTrajectoryVector(const QPointF& trajectoryVector)
 {
+    if (!m_webPageProxy->drawingArea())
+        return;
+
     m_webPageProxy->drawingArea()->setVisibleContentRectTrajectoryVector(trajectoryVector);
 }
 
